# mc_cifx-torque-control

./: .clang-format-common.sh  .gitmodules  CMakeLists.txt
src/: CalculateProg.c  CalculateProg.h  Display.c  Display.h  IOAPPzm.c  IOAPPzm.h  InitCommunication.c  InitCommunication.h  SDOApp.c  SDOApp.h  TLR_Types.h  main.cpp  rcX_Public.h  rcX_User.h  utils.cpp  utils.h
utils/: setup.sh
